# pm_folding

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: FindSQLite3.cmake  (+4 more)
test/: CMakeLists.txt
test/data/GrViz/: grviz.cmd.example  of1-2.gv  of1-2.gv.example  of1-2.gv.ps  of2.gv  of2.gv.ps
test/data/complex/CPnSynthesis1/bak/: Log4_simple1-pn.gv  Log4_simple1-pn.gv.001.ps  Log4_simple1-pn.gv.002.ps  Log4_simple1-pn.gv.003.ps  Log4_simple1-pn.gv.ps  Log4_simple1-ts.gv  Log4_simple1-ts.gv.ps  Log5_simple1-pn.gv  Log5_simple1-pn.gv.ps  Log5_simple1-ts.gv  Log5_simple1-ts.gv.ps
test/data/complex/CPnSynthesis1/prev1/: Log5_simple1-pn.gv  Log5_simple1-ts.gv
test/data/complex/CPnSynthesis1/s001/: goodru2_red1-pn.gv  goodru2_red1-ts.gv
test/data/complex/CPnSynthesis1/s002/: goodru2_red1-pn.001.gv  goodru2_red1-pn.002.gv  goodru2_red1-ts.001.gv  goodru2_red1-ts.002.gv
test/data/complex/CPnSynthesis1/s004/: goodru2_red1_Slr-pn.gv  goodru2_red1_Slr-ts.gv  readme.xi.txt
test/data/complex/CPnSynthesis1/s005/: goodru2_red1_Slr-pn.gv  goodru2_red1_Slr-ts.gv  readme.xi.txt
test/data/logs/: log04-1-1.csv  log04-1.csv  log04-1.sq3  log04-2.csv  log04-3.csv  log04-3.sq3  log04.csv  log04.sq3  log05.sq3  log05.xlsx
test/data/logs/BPIC15_1_2/: Config.csv
test/data/pn/: BasePetriNetDotWriter1-mapLabeledNet1.gv  BasePetriNetDotWriter1-mapLabeledNet1.gv.001.ps  BasePetriNetDotWriter1-mapLabeledNet1.gv.ps  BasePetriNetDotWriter1-mapLabeledNetWithMarking1.gv  BasePetriNetDotWriter1-mapLabeledNetWithMarking1.gv.ps  EventLogPetriNet_1_Test-pn1.gv  EventLogPetriNet_1_Test-pn1.gv.ps  EventLogPetriNet_1_Test-pnWithMarking1.gv  EventLogPetriNet_1_Test-pnWithMarking1.gv.ps
test/data/pn/regs/: PnRegSynthesizer1-genMinPreRegions2.gv  PnRegSynthesizer1-simpleTs1.gv  PnRegSynthesizer1-syntWithLoop2_3-pn.gv  PnRegSynthesizer1-syntWithLoop2_3-ts.gv  PnRegSynthesizer1-synthesis1.gv  PnRegSynthesizer1-synthesis2.gv  PnRegSynthesizer1-synthesis2_1.gv  PnRegSynthesizer1-synthesis2_2.gv  PnRegSynthesizer1-synthesis3-pn.gv  PnRegSynthesizer1-synthesis3-ts.gv  dot-gif-all.cmd
test/data/pn/regs/bak1/s001/: PnRegSynthesizer1-genMinPreRegions2.gv  PnRegSynthesizer1-genMinPreRegions2.gv.ps  PnRegSynthesizer1-simpleTs1.gv  PnRegSynthesizer1-simpleTs1.gv.ps  PnRegSynthesizer1-synthesis1.gv  PnRegSynthesizer1-synthesis1.gv.001.ps  PnRegSynthesizer1-synthesis1.gv.002.ps  PnRegSynthesizer1-synthesis1.gv.003.ps  PnRegSynthesizer1-synthesis1.gv.004.ps  PnRegSynthesizer1-synthesis1.gv.005.ps  PnRegSynthesizer1-synthesis1.gv.ps  PnRegSynthesizer1-synthesis2.gv  PnRegSynthesizer1-synthesis2.gv.001.ps  PnRegSynthesizer1-synthesis2.gv.002.ps  PnRegSynthesizer1-synthesis2.gv.003.ps  (+14 more)
test/data/pn/regs/cases/: Zubkova1-pn.gv  Zubkova1-ts.gv
test/data/pn/regs/sloops/: PnRegSynthesizer1-syntWithLoop2_4_2-pn.gv  PnRegSynthesizer1-syntWithLoop2_4_2-ts.gv  PnRegSynthesizer1-syntWithLoop2_4_3-pn.gv  PnRegSynthesizer1-syntWithLoop2_4_3-ts-a.gv  PnRegSynthesizer1-syntWithLoop2_4_3-ts-b.gv  PnRegSynthesizer1-syntWithLoop2_4_4-pn.gv  PnRegSynthesizer1-syntWithLoop2_4_4-ts-a.gv  PnRegSynthesizer1-syntWithLoop2_4_5-pn.gv  PnRegSynthesizer1-syntWithLoop2_4_5-ts.gv  dot-gif-all.cmd
test/data/pn/regs/synth3-question/: PnRegSynthesizer1-synthesis3-pn.001.gv  PnRegSynthesizer1-synthesis3-pn.002.gv  PnRegSynthesizer1-synthesis3-pn.003.gv  PnRegSynthesizer1-synthesis3-pn.004.gv  PnRegSynthesizer1-synthesis3-pn.005.gv  PnRegSynthesizer1-synthesis3-pn.006.gv  PnRegSynthesizer1-synthesis3-pn.007.gv  PnRegSynthesizer1-synthesis3-pn.a008.gv  PnRegSynthesizer1-synthesis3-pn.old.gv  PnRegSynthesizer1-synthesis3-ts.gv  PnRegSynthesizer1-synthesis3-ts.old.gv  compar1.vsd  compar2.vsd
test/data/ts/: EventLogTsFreqDotWriter1-acceptingState1.gv  MiscTsConverters1-selfLoopEliminate1-a.gv  MiscTsConverters1-selfLoopEliminate1-b.gv  TsSimpleBuilder_1_Test-buildSimpleTsFromLog4_SingleAcptState1.gv  TsSimpleBuilder_1_Test-buildSimpleTsFromLog4_Vis1.gv
test/data/ts/bak1/: EventLogTsFreqDotWriter1-acceptingState1.gv  EventLogTsFreqDotWriter1-acceptingState1.gv.ps  TsSimpleBuilder_1_Test-buildSimpleTsFromLog4_SingleAcptState1.gv  TsSimpleBuilder_1_Test-buildSimpleTsFromLog4_SingleAcptState1.gv.001.ps  TsSimpleBuilder_1_Test-buildSimpleTsFromLog4_SingleAcptState1.gv.002.ps  TsSimpleBuilder_1_Test-buildSimpleTsFromLog4_SingleAcptState1.gv.003.ps  TsSimpleBuilder_1_Test-buildSimpleTsFromLog4_SingleAcptState1.gv.004.ps  TsSimpleBuilder_1_Test-buildSimpleTsFromLog4_SingleAcptState1.gv.ps  TsSimpleBuilder_1_Test-buildSimpleTsFromLog4_Vis1.gv  TsSimpleBuilder_1_Test-buildSimpleTsFromLog4_Vis1.gv.ps
test/ldopa/: constants.h.in
test/ldopa/complex/: c_pn_synthesis_1_test.cpp
test/ldopa/eventlog/: csvlog_test.cpp  sqlitelog_test.cpp
test/ldopa/performance/: performance_1_test.cpp
test/ldopa/pn/algos/: base_ptnet_dotwriter_1_test.cpp  pn_synthesis_1_test.cpp  pn_synthesis_ext.h
test/ldopa/pn/models/: base_ptnet_1_test.cpp  evlog_ptnets_1_test.cpp  gen_petrinet_1_test.cpp
test/ldopa/ts/algos/: evlog_ts_red_dotwriter_1_test.cpp  ts_folding_builder_1_test.cpp  ts_misc_converters_1_test.cpp  ts_simple_builder_1_test.cpp
test/ldopa/ts/algos/obsolete1/: eventlog_ts_grviz_exporter_1_test.cpp  eventlog_tsbuilder_1_test.cpp
test/ldopa/ts/models/: eventlog_ts_2_test.cpp  evlog_ts_fold_1_test.cpp  labeledts_1_test.cpp
test/ldopa/ts/models/obsolete1/: basets_1_test.cpp
test/source/: xi_test.cpp
test/source/ldopa/complex/: c_pn_synthesis_1_test.cpp  complex_settings.h.example
test/source/ldopa/eventlog/: csvlog_test.cpp  csvlog_test_settings.h.example  sqlitelog_test.cpp
test/source/ldopa/graphs/: bidigraph_1_test.cpp  bidigraph_2_test.cpp  bidigraph_test.cpp
test/source/ldopa/performance/: performance_1_test.cpp  performance_test_settings.h.example
test/source/ldopa/ts/: ts_test_settings.h.example
test/source/ldopa/ts/algos/: evlog_ts_red_dotwriter_1_test.cpp  ts_misc_converters_1_test.cpp  ts_simple_builder_1_test.cpp
test/source/ldopa/ts/models/: evlog_ts_red_1_test.cpp
(+138 files in other folders)
